<resources>
    <string name="app_name">My Application</string>
    <string name="app_icon" />
    <string name="welcome_demo">Welcome Demo!</string>
    <string name="app_list_name">获取应用列表</string>
    <string name="video_play_name">播放视频</string>
    <string name="chat_name">聊天</string>
    <string name="chat_edit">输入消息</string>
    <string name="chat_send">发送</string>
    <string name="edit_ip">请输入端口号</string>
    <string name="button_test_port">测试8888端口</string>
    <string name="test_network_name">测试端口状态</string>
    <string name="switch_button">切换用户</string>
</resources>