<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/test_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_network_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>


    <EditText
        android:hint="@string/edit_ip"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edit_ip_address"
        android:padding="16dp" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_test_port"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="test result here"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp" />


</LinearLayout>